Fix dashboard structure

--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
-.overlay {
-    bottom: fixed;
-    botton: 20px;
-    left: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: white;
-    padding: 10px 16px;
-    border-radius: 10px;
-    font-size: 18px;
-}
-
-
-
-
-
-
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Dashboard v1</title>
+    <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+       
+<h1>Dashboard v1</h1>
 <div class="overlay"> 
     🚧Dashboard in Development🚧
 </div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
 
